_generated-doc/3.2/config/quarkus-vertx-core-config-group-config-cluster-configuration.adoc

:summaryTableId: quarkus-vertx-core-config-group-config-cluster-configuration
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-vertx-core-config-group-config-cluster-configuration_configuration]]link:#quarkus-vertx-core-config-group-config-cluster-configuration_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-vertx-core-config-group-config-cluster-configuration_quarkus-vertx-cluster-host]]`link:#quarkus-vertx-core-config-group-config-cluster-configuration_quarkus-vertx-cluster-host[quarkus.vertx.cluster.host]`


[.description]
--
The host name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|`localhost`


a| [[quarkus-vertx-core-config-group-config-cluster-configuration_quarkus-vertx-cluster-port]]`link:#quarkus-vertx-core-config-group-config-cluster-configuration_quarkus-vertx-cluster-port[quarkus.vertx.cluster.port]`


[.description]
--
The port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-vertx-core-config-group-config-cluster-configuration_quarkus-vertx-cluster-public-host]]`link:#quarkus-vertx-core-config-group-config-cluster-configuration_quarkus-vertx-cluster-public-host[quarkus.vertx.cluster.public-host]`


[.description]
--
The public host name.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_PUBLIC_HOST+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_PUBLIC_HOST+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-vertx-core-config-group-config-cluster-configuration_quarkus-vertx-cluster-public-port]]`link:#quarkus-vertx-core-config-group-config-cluster-configuration_quarkus-vertx-cluster-public-port[quarkus.vertx.cluster.public-port]`


[.description]
--
The public port.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_PUBLIC_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_PUBLIC_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-vertx-core-config-group-config-cluster-configuration_quarkus-vertx-cluster-clustered]]`link:#quarkus-vertx-core-config-group-config-cluster-configuration_quarkus-vertx-cluster-clustered[quarkus.vertx.cluster.clustered]`


[.description]
--
Enables or disables the clustering.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_CLUSTERED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_CLUSTERED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-vertx-core-config-group-config-cluster-configuration_quarkus-vertx-cluster-ping-interval]]`link:#quarkus-vertx-core-config-group-config-cluster-configuration_quarkus-vertx-cluster-ping-interval[quarkus.vertx.cluster.ping-interval]`


[.description]
--
The ping interval.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_PING_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_PING_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`20S`


a| [[quarkus-vertx-core-config-group-config-cluster-configuration_quarkus-vertx-cluster-ping-reply-interval]]`link:#quarkus-vertx-core-config-group-config-cluster-configuration_quarkus-vertx-cluster-ping-reply-interval[quarkus.vertx.cluster.ping-reply-interval]`


[.description]
--
The ping reply interval.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_VERTX_CLUSTER_PING_REPLY_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_VERTX_CLUSTER_PING_REPLY_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[title=More information about the Duration format]]
|`20S`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
